Inventory: Report damaged Implemented
